<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ctm.ctmwireless.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:id="@+id/txtTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtUnlimited"
        android:layout_below="@+id/txtPlan"
        android:layout_centerHorizontal="true"
        android:text="@string/txtUnlimited"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUnlimited"
        android:layout_alignParentStart="true"
        android:baselineAligned="false"
        android:id="@+id/radioGroup"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnData1"
            android:id="@+id/btnData1"
            android:checked="false"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginBottom="10dp"
            android:textColor="#FFCC00" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnData3"
            android:id="@+id/btnData3"
            android:checked="false"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginBottom="10dp"
            android:textColor="#FFCC00" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnData5"
            android:id="@+id/btnData5"
            android:checked="false"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginBottom="10dp"
            android:textColor="#FFCC00" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnData10"
            android:id="@+id/btnData10"
            android:checked="false"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_below="@+id/radioGroup"
            android:layout_alignStart="@+id/radioGroup"
            android:layout_marginBottom="15dp"
            android:textColor="#FFCC00" />

    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txtUnlimited"
        android:layout_above="@+id/noActFee"></LinearLayout>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchProvider"
        android:id="@+id/switchProvider"
        android:layout_below="@+id/noActFee"
        android:layout_centerHorizontal="true"
        android:checked="false"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#006633" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/freePhone"
        android:id="@+id/freePhone"
        android:layout_below="@+id/switchProvider"
        android:layout_centerHorizontal="true"
        android:checked="false"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#006633" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDiscount"
        android:id="@+id/txtDiscount"
        android:layout_below="@+id/freePhone"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#FF0000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGetStarted"
        android:id="@+id/btnGetStarted"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#006633"
        android:layout_below="@+id/txtDiscount"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnGetStarted"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtCost"
        android:textSize="18dp"
        android:textColor="#009966" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPlan"
        android:id="@+id/txtPlan"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noActFee"
        android:id="@+id/noActFee"
        android:checked="false"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#006633"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true" />

</RelativeLayout>
